Changes in HARP-0.5.3:
- Changed shuffle function to avoid predictable results.

Changes in HARP-0.5.2:
- Added output to temp playlist editor.
- Added order to song selection by album/artist/genre commands.
- Added ID selection prompt for ambiguous string identifiers.
- Added sorting by album date and date editing.
- Added writing the current playlist to the database.
- Moved player status updates to a separate thread.
- Added ADTS AAC decoding.

Changes in HARP-0.5.1:
- Increased ZShuffle speed.
- ZShuffle now preserves randomness.
- Advanced seek and jump commands unpause player.
- Increased speed of edit's album/artist/genre -> song.
- Fixed a bug in genre management.
- Increased genre, album, and artist list and play speeds.
- Removed incompatible OSSv3 macros.
- Title queries using fitting exception now have fitted columns
	without truncation.
- Fixed memory leaks.
- Fixed a bug on setting the album date.
- Play length is now calculated on insert.
- Next and quit commands unpause player.
- Fixed single quote escaping bug in edit.
- Fixed bug causing the volume to go beyond 100%.
- Cleaned up headers on playlist listing.
- Rating changes now display previous rating as well as new rating.
- Added support for SHOUTcast/Icecast streams.
- Fixed bug in ZShuffle causing it to hang on small playlists.
- Added track listing to songs.
- Added player and debug logs.
- Added support for shuffling songs, albums, or artists.
- Added advanced player commands to edit the temporary playlist at runtime.

Changes in HARP-0.5.0:
- Fixed bugs in edit, admin, tree.
- Increased insert speed.
- Added song insertion with information gathered from
	the file path.
- Changed debug messages.
	-v : Helpful user-level messages.
	-v -v : Debugging messages.
	-v -v -v : SQL queries, etc.
- Made listing more efficient.
- Made shuffles more efficient.
- Improved zshuffle algorithm.
	- Stat based shuffle interleaves into standard shuffle
		at a random interval.