@@ -1,4 +1,4 @@
-.TH HARP 1 "May 2010" "HARP 0.5.2" "User Commands"
+.TH HARP 1 "November 2012" "HARP 0.5.3" "User Commands"
 .SH NAME
 harp \- play and manage music
 .SH SYNOPSIS
@@ -22,6 +22,9 @@ When combined with the play option, shuffle the selected songs. The given argume
 .TP
 \fB\-z\fP,\fB --zshuffle\fP
 When combined with the play option, shuffle the selected songs with statistical modifiers.
+.TP
+\fB\-r\fP,\fB --repeat\fP{number of repeats}
+When combined with the play option, repeat the generated playlist indefinitely or the specified number of times.
 .TP
 \fB\-p\fP,\fB --play=\fP[unique name | id]
 Play the songs listed under the name or id in the specified type.
