@@ -1,5 +1,6 @@
 Changes in HARP-0.5.3:
 - Changed shuffle function to avoid predictable results.
+- Added option to repeat playlist.
 
 Changes in HARP-0.5.2:
 - Added output to temp playlist editor.
